--- a/index.html
+++ b/index.html
@@ -6,6 +6,5 @@
   </head>
   <body>
     <div id="root"></div>
-  </body>
-  <script src="dist/bundle.js"></script>
+  <script type="text/javascript" src="manifest.90823695f982c82d4f65.js"></script><script type="text/javascript" src="vendor.3bb03e35db45092aded3.js"></script><script type="text/javascript" src="bundle.175561e98e674ab6c789.js"></script></body>
 </html>
